Added a bunch of stuff including some random challenges I didn't find on LeetCode.
Can't wait to do this all again in Kotlin btw. =)